# mysite

./: .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  fly.toml  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py
mysite/: settings.py  urls.py
templates/: base.html  index.html  post_detail.html  sidebar.html
