[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Alina Rizvanova <alina.rizvanova.2006@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
