[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Alina Rizvanova <alina.rizvanova.2006@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
gunicorn = "^21.2.0"
sentry-sdk = "^1.39.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
